refactor: Complete Settings dialog reorganization with backup migration and documentation
Major refactoring of the Settings system with backup integration, configuration simplification, and comprehensive technical documentation.

UI Enhancements:
- New dedicated Backup page (Page 5: Sauvegardes ) replacing Tools menu
- Two backup sections with real-time statistics:
  * Characters Backup: Enable, Path+Browse, Compress, Size limit, Count, Last date, Backup Now, Open Folder
  * Cookies Backup: Enable, Path+Browse, Count, Last date, Backup Now, Open Folder
- Removed Configuration folder Browse/Move UI (security - always next to exe)
- Statistics display with bold font and blue color (#0078D4)
- Action buttons styled: Backup Now (blue #0078D4), Open Folder (green #107C10)
- Automatic character list refresh after Characters folder change
- All folder paths normalized to Windows backslashes

Technical Changes:
- Settings dialog reorganization:
  * Removed Tools menu entirely from UI/ui_manager.py (-7 lines)
  * Added complete backup page to UI/settings_dialog.py (+273 lines)
  * 6 new backup methods: _browse_backup_path(), _browse_cookies_backup_path(), _backup_now(), _backup_cookies_now(), _open_backup_folder(), _open_cookies_backup_folder()
  * BackupManager initialization in _create_backup_page()
  * Real-time UI updates after backup execution (count + last date)
- Configuration architecture simplified:
  * Config folder now non-configurable (always <exe_dir>/Configuration)
  * Removed .config_path file system from config_manager.py (-40 lines)
  * Simplified get_config_dir(), load_config(), save_config() methods
  * Prevents circular dependency (config can't define its own location)
- Backup settings persistence in main.py (+13 lines):
  * backup_enabled, backup_path, backup_compress, backup_size_limit_mb
  * cookies_backup_enabled, cookies_backup_path
  * All saved on settings dialog OK
- Path normalization:
  * Applied in _browse_folder() after QFileDialog
  * Applie

--- a/Language/de.json
+++ b/Language/de.json
@@ -78,6 +78,24 @@
     "config_window_content": "Konfigurationsoptionen werden hier sein.",
     "config_path_label": "Charakterverzeichnis",
     "browse_button": "Durchsuchen...",
+    "move_folder_button": "Verschieben",
+    "move_folder_tooltip": "Verschieben oder erstellen Sie diesen Ordner an einem neuen Speicherort",
+    "move_folder_no_source": "Der Quellordner existiert nicht.",
+    "move_folder_select_destination": "Wählen Sie den übergeordneten Zielordner",
+    "move_folder_name_title": "Ordnername",
+    "move_folder_name_message": "Geben Sie den Ordnernamen ein:",
+    "move_folder_confirm_title": "Verschieben bestätigen",
+    "move_folder_confirm_message": "Möchten Sie den Ordner und seinen Inhalt verschieben?",
+    "create_folder_confirm_title": "Ordner erstellen",
+    "create_folder_confirm_message": "Ordner an diesem Speicherort erstellen?",
+    "move_folder_in_progress": "Vorgang läuft...",
+    "move_folder_title": "Verschieben",
+    "move_folder_destination_exists": "Der Ordner existiert bereits am Zielort.",
+    "move_folder_delete_title": "Alten Ordner löschen?",
+    "move_folder_delete_message": "Der Ordner wurde erfolgreich kopiert. Möchten Sie den alten Ordner löschen?",
+    "move_folder_success": "Ordner erfolgreich verschoben.",
+    "move_folder_copy_success": "Ordner erfolgreich kopiert. Der alte Ordner wurde beibehalten.",
+    "create_folder_success": "Ordner erfolgreich erstellt",
     "config_file_path_label": "Konfigurationsverzeichnis",
     "save_button": "Speichern",
     "select_folder_dialog_title": "Charakterordner auswählen",
@@ -294,8 +312,18 @@
     "backup_now_button": "Jetzt sichern",
     "backup_success_title": "Erfolg",
     "backup_success_message": "Sicherung erstellt: {0}",
+    "backup_success": "Sicherung erfolgreich erstellt",
+    "backup_failed": "Sicherung fehlgeschlagen",
     "backup_error_title": "Fehler",
-    "backup_error_message": "Sicherung fehlgeschlagen: {0}",
+    "backup_error_message": "Sicherungsfehler: {0}",
+    "backup_error": "Fehler beim Sichern",
+    "backup_characters_title": "Charakter-Sicherungen",
+    "backup_cookies_title": "Eden-Cookies-Sicherungen",
+    "backup_total_label": "Anzahl der Sicherungen",
+    "backup_last_label": "Letzte Sicherung",
+    "backup_no_backup": "Keine Sicherung",
+    "backup_open_folder": "Ordner öffnen",
+    "backup_select_folder": "Sicherungsordner auswählen",
     "backup_invalid_max_count": "Anzahl der Sicherungen muss eine Ganzzahl sein",
     "backup_invalid_size_limit": "Speicherlimit muss eine Ganzzahl sein",
     "backup_settings_saved_title": "Einstellungen gespeichert",
