--- a/Language/en.json
+++ b/Language/en.json
@@ -77,7 +77,25 @@
     "config_window_content": "Configuration options will be here.",
     "config_path_label": "Character Directory",
     "browse_button": "Browse...",
-    "config_file_path_label": "Configuration Directory",
+    "move_folder_button": "Move",
+    "move_folder_tooltip": "Move or create this folder to a new location",
+    "move_folder_no_source": "The source folder does not exist.",
+    "move_folder_select_destination": "Select the parent destination folder",
+    "move_folder_name_title": "Folder Name",
+    "move_folder_name_message": "Enter the folder name:",
+    "move_folder_confirm_title": "Confirm Move",
+    "move_folder_confirm_message": "Do you want to move the folder and its contents?",
+    "create_folder_confirm_title": "Create Folder",
+    "create_folder_confirm_message": "Create the folder at this location?",
+    "move_folder_in_progress": "Operation in progress...",
+    "move_folder_title": "Move",
+    "move_folder_destination_exists": "The folder already exists at the destination.",
+    "move_folder_delete_title": "Delete old folder?",
+    "move_folder_delete_message": "The folder has been copied successfully. Do you want to delete the old folder?",
+    "move_folder_success": "Folder moved successfully.",
+    "move_folder_copy_success": "Folder copied successfully. The old folder has been kept.",
+    "create_folder_success": "Folder created successfully",
+    "config_file_path_label": "Configuration directory",
     "save_button": "Save",
     "select_folder_dialog_title": "Select Character Folder",
     "select_config_folder_dialog_title": "Select Configuration Folder",
@@ -291,11 +309,21 @@
     "backup_size_limit_tooltip": "(20 MB by default, -1 for unlimited)",
     "backup_usage_label": "Current usage",
     "backup_recent_label": "Recent backups:",
-    "backup_now_button": "Backup now",
+    "backup_now_button": "Backup Now",
     "backup_success_title": "Success",
     "backup_success_message": "Backup created: {0}",
+    "backup_success": "Backup created successfully",
+    "backup_failed": "Backup failed",
     "backup_error_title": "Error",
-    "backup_error_message": "Backup failed: {0}",
+    "backup_error_message": "Backup error: {0}",
+    "backup_error": "Error during backup",
+    "backup_characters_title": "Character Backups",
+    "backup_cookies_title": "Eden Cookies Backups",
+    "backup_total_label": "Number of backups",
+    "backup_last_label": "Last backup",
+    "backup_no_backup": "No backup",
+    "backup_open_folder": "Open folder",
+    "backup_select_folder": "Select backup folder",
     "backup_invalid_max_count": "Number of backups must be an integer",
     "backup_invalid_size_limit": "Storage limit must be an integer",
     "backup_settings_saved_title": "Settings saved",
