--- a/Language/fr.json
+++ b/Language/fr.json
@@ -78,6 +78,24 @@
     "config_window_content": "Les options de configuration seront ici.",
     "config_path_label": "Répertoire des personnages",
     "browse_button": "Parcourir...",
+    "move_folder_button": "Déplacer",
+    "move_folder_tooltip": "Déplacer ou créer ce dossier à un nouvel emplacement",
+    "move_folder_no_source": "Le dossier source n'existe pas.",
+    "move_folder_select_destination": "Sélectionnez le dossier parent de destination",
+    "move_folder_name_title": "Nom du dossier",
+    "move_folder_name_message": "Entrez le nom du dossier :",
+    "move_folder_confirm_title": "Confirmer le déplacement",
+    "move_folder_confirm_message": "Voulez-vous déplacer le dossier et son contenu ?",
+    "create_folder_confirm_title": "Créer le dossier",
+    "create_folder_confirm_message": "Créer le dossier à cet emplacement ?",
+    "move_folder_in_progress": "Opération en cours...",
+    "move_folder_title": "Déplacement",
+    "move_folder_destination_exists": "Le dossier existe déjà à la destination.",
+    "move_folder_delete_title": "Supprimer l'ancien dossier ?",
+    "move_folder_delete_message": "Le dossier a été copié avec succès. Voulez-vous supprimer l'ancien dossier ?",
+    "move_folder_success": "Dossier déplacé avec succès.",
+    "move_folder_copy_success": "Dossier copié avec succès. L'ancien dossier a été conservé.",
+    "create_folder_success": "Dossier créé avec succès",
     "config_file_path_label": "Répertoire de configuration",
     "save_button": "Enregistrer",
     "select_folder_dialog_title": "Sélectionner le dossier des personnages",
@@ -96,7 +114,6 @@
     "config_default_realm_label": "Royaume par défaut",
     "config_manual_column_resize_label": "Gestion manuelle de la taille des colonnes",
     "config_season_group_title": "Configuration Serveur",
-    "config_paths_group_title": "Chemins des dossiers",
     "config_general_group_title": "Paramètres généraux",
     "config_debug_group_title": "Debug",
     "config_log_folder_group_title": "Dossier des logs",
@@ -294,8 +311,18 @@
     "backup_now_button": "Sauvegarder maintenant",
     "backup_success_title": "Succès",
     "backup_success_message": "Sauvegarde créée : {0}",
+    "backup_success": "Sauvegarde créée avec succès",
+    "backup_failed": "La sauvegarde a échoué",
     "backup_error_title": "Erreur",
     "backup_error_message": "Erreur lors de la sauvegarde : {0}",
+    "backup_error": "Erreur lors de la sauvegarde",
+    "backup_characters_title": "Sauvegardes des personnages",
+    "backup_cookies_title": "Sauvegardes des cookies Eden",
+    "backup_total_label": "Nombre de sauvegardes",
+    "backup_last_label": "Dernière sauvegarde",
+    "backup_no_backup": "Aucune sauvegarde",
+    "backup_open_folder": "Ouvrir le dossier",
+    "backup_select_folder": "Sélectionner le dossier de sauvegarde",
     "backup_invalid_max_count": "Le nombre de sauvegardes doit être un entier",
     "backup_invalid_size_limit": "La limite de taille doit être un entier",
     "backup_settings_saved_title": "Paramètres sauvegardés",
