feat(settings): implement fixed folder names and open folder buttons
BREAKING CHANGE: Folder names are now predefined by the application

### Features
- Add Open Folder buttons () to all folder configurations
- Implement fixed folder names (no user input for consistency)
- Add special handling for backup folders (/Backups/Characters, /Backups/Cookies)
- Add 6 new open folder methods for quick access
- Add open_folder_button translations (FR/EN/DE)

### UI/UX Improvements
- Standardize folder path layout: [Browse] [ Move] [ Open]
- Reorganize backup sections: Enable+Compress side by side
- Display backup stats side by side (Number + Last date)
- Remove non-functional 'Backup Now' buttons

### Code Quality
- Remove obsolete config_folder setting from config.json
- Remove QInputDialog for folder names (~15 lines)
- Simplify destination path logic (~20 lines)
- Add comprehensive UI component template
- Update folder move system documentation

### Documentation
- Create UI_COMPONENT_TEMPLATE.md (reusable template)
- Create CHANGELOG_V0.108.md (complete change summary)
- Update FOLDER_MOVE_SYSTEM_EN.md to v2.0

### Technical Details
Fixed folder names:
- character_folder  'Characters'
- armor_folder  'Armor'
- log_folder  'Logs'
- cookies_folder  'Cookies'
- backup_path  'Backups/Characters'
- cookies_backup_path  'Backups/Cookies'

Files modified:
- UI/settings_dialog.py (primary changes)
- main.py (remove config_folder logic)
- UI/dialogs.py (config path hardcoded)
- Configuration/config.json (remove config_folder key)
- Language/*.json (add open_folder_button)

--- a/Language/de.json
+++ b/Language/de.json
@@ -79,6 +79,7 @@
     "config_path_label": "Charakterverzeichnis",
     "browse_button": "Durchsuchen...",
     "move_folder_button": "Verschieben",
+    "open_folder_button": "Ordner öffnen",
     "move_folder_tooltip": "Verschieben oder erstellen Sie diesen Ordner an einem neuen Speicherort",
     "move_folder_no_source": "Der Quellordner existiert nicht.",
     "move_folder_select_destination": "Wählen Sie den übergeordneten Zielordner",
