fix(lang): Translate Eden status bar buttons for all languages
- Added translations for eden_refresh, eden_search, eden_manage buttons
- Updated ui_manager.py to use lang.get() instead of hardcoded French
- Fixed bug where EN/DE users saw French button labels
- Added legacy mappings for backward compatibility
- Updated technical documentation

Files modified:
- Language/fr.json: Added FR translations
- Language/en.json: Added EN translations
- Language/de.json: Added DE translations
- Functions/ui_manager.py: Use lang.get() for button labels
- Functions/language_schema.py: Added legacy v1v2 mappings
- Documentations/Lang/LANGUAGE_V2_TECHNICAL_DOC.md: Updated button examples

--- a/Language/de.json
+++ b/Language/de.json
@@ -154,7 +154,10 @@
         "open_backup_folder": "Ordner öffnen",
         "version_check": "🔄 Prüfen",
         "version_check_checking": "⏳ Wird geprüft...",
-        "download": "📥 Herunterladen"
+        "download": "📥 Herunterladen",
+        "eden_refresh": "🔄 Aktualisieren",
+        "eden_search": "🔍 Suchen",
+        "eden_manage": "⚙️ Verwalten"
     },
     "messages": {
         "errors": {
