fix(lang): Translate cookie manager dialog and generation messages
- Added 52+ translation keys for Cookie Manager Dialog (FR/EN/DE)
- Added 2 keys for cookie generation messages (browser_opened, cookies_saved)
- Updated CookieManagerDialog to use lang.get() throughout
- Updated cookie_manager.py to use translations for success messages
- Added legacy mappings for cookie buttons
- Updated LANGUAGE_V2_TECHNICAL_DOC.md with cookie_manager section

Translation keys added:
- cookie_manager.window_title, title, info_group_title, import_group_title
- cookie_manager.file_path_label, file_path_placeholder, generate_tooltip
- cookie_manager.status_* (no_cookies, read_error, expired, valid)
- cookie_manager.details_*, expiry_date, remaining_validity
- cookie_manager.eden_access, eden_connected, eden_testing
- cookie_manager.*_cookies_display, session_cookies, file_location
- cookie_manager.browse_dialog_*, import_*, delete_*, user_action_*
- cookie_manager.browser_opened_message, cookies_saved_success
- buttons.cookie_generate, cookie_delete, cookie_browse

Files modified:
- Language/fr.json: Added 54 cookie manager keys
- Language/en.json: Added 54 cookie manager keys
- Language/de.json: Added 54 cookie manager keys
- UI/dialogs.py: 13 replacements (all hardcoded texts  lang.get)
- Functions/cookie_manager.py: Use lang.get for success message
- Functions/language_schema.py: Added 3 legacy button mappings
- Documentations/Lang/LANGUAGE_V2_TECHNICAL_DOC.md: Added section 5.1

--- a/Language/de.json
+++ b/Language/de.json
@@ -157,7 +157,58 @@
         "download": "📥 Herunterladen",
         "eden_refresh": "🔄 Aktualisieren",
         "eden_search": "🔍 Suchen",
-        "eden_manage": "⚙️ Verwalten"
+        "eden_manage": "⚙️ Verwalten",
+        "cookie_generate": "🔐 Cookies Generieren",
+        "cookie_delete": "🗑️ Löschen",
+        "cookie_browse": "📁 Durchsuchen"
+    },
+    "cookie_manager": {
+        "window_title": "Eden-Cookies-Verwaltung",
+        "title": "🍪 Eden-Cookies-Verwaltung",
+        "info_group_title": "📊 Cookie-Status",
+        "import_group_title": "📂 Manueller Import",
+        "file_path_label": "Dateipfad:",
+        "file_path_placeholder": "Wählen Sie eine .pkl-Datei aus oder geben Sie den Pfad ein",
+        "generate_tooltip": "Öffnet einen Browser zum Verbinden und Abrufen von Cookies",
+        "status_no_cookies": "❌ <b>Keine Cookies gefunden</b>",
+        "status_read_error": "⚠️ <b>Lesefehler</b>",
+        "status_expired": "⚠️ <b>Cookies abgelaufen</b>",
+        "status_valid": "✅ <b>Gültige Cookies</b>",
+        "details_need_import": "Um den Eden-Scraper zu verwenden, müssen Sie eine Cookie-Datei importieren.<br/>Verwenden Sie die Schaltfläche 'Cookies importieren' unten.",
+        "details_need_new": "<br/>Sie müssen neue Cookies importieren.",
+        "expiry_date": "📅 <b>Ablaufdatum:</b> {date}",
+        "remaining_validity": "⏰ <b>Verbleibende Gültigkeit:</b> {days} Tage",
+        "eden_access": "🌐 <b>Eden-Zugang:</b>",
+        "eden_connected": "<span style='color: green;'>✅ Verbunden</span>",
+        "eden_testing": "<span style='color: gray;'>⏳ Test läuft...</span>",
+        "total_cookies": "Gesamt: {count} Cookies",
+        "expired_cookies": "Abgelaufen: {count}",
+        "valid_cookies": "Gültig: {count}",
+        "total_cookies_display": "📦 Gesamt: {count} Cookies",
+        "valid_cookies_display": "✓ Gültig: {count}",
+        "session_cookies": "🔄 Sitzung: {count}",
+        "file_location": "<br/>📁 Datei: {path}",
+        "test_with_browser": "{icon} <i>Test durchgeführt mit: {browser}</i>",
+        "browse_dialog_title": "Cookie-Datei auswählen",
+        "browse_dialog_filter": "Pickle-Dateien (*.pkl);;Alle Dateien (*.*)",
+        "import_warning_title": "Warnung",
+        "import_warning_message": "Bitte wählen Sie einen Dateipfad aus oder geben Sie ihn ein.",
+        "import_error_not_exists_title": "Fehler",
+        "import_error_not_exists_message": "Die Datei existiert nicht:\n\n{path}\n\nÜberprüfen Sie den Pfad und versuchen Sie es erneut.",
+        "import_success_title": "Erfolg",
+        "import_success_message": "Cookies erfolgreich importiert!",
+        "import_error_title": "Fehler",
+        "import_error_message": "Cookie-Datei kann nicht importiert werden.\n\nDatei: {path}\n\nDie Datei muss eine gültige .pkl-Datei mit Cookies sein.",
+        "delete_confirm_title": "Löschen bestätigen",
+        "delete_confirm_message": "Sind Sie sicher, dass Sie die Cookies löschen möchten?\n\nEin Backup wird automatisch erstellt.",
+        "delete_success_title": "Erfolg",
+        "delete_success_message": "Cookies wurden gelöscht.",
+        "delete_error_title": "Fehler",
+        "delete_error_message": "Cookies können nicht gelöscht werden.",
+        "user_action_title": "Warten auf Verbindung",
+        "user_action_header": "<b>Jetzt verbinden</b>",
+        "browser_opened_message": "Der {browser}-Browser ist geöffnet.\n\nMelden Sie sich mit Discord an und klicken Sie dann auf OK.",
+        "cookies_saved_success": "{count} Cookies erfolgreich gespeichert"
     },
     "messages": {
         "errors": {
