--- a/Language/en.json
+++ b/Language/en.json
@@ -157,7 +157,58 @@
         "download": "📥 Download",
         "eden_refresh": "🔄 Refresh",
         "eden_search": "🔍 Search",
-        "eden_manage": "⚙️ Manage"
+        "eden_manage": "⚙️ Manage",
+        "cookie_generate": "🔐 Generate Cookies",
+        "cookie_delete": "🗑️ Delete",
+        "cookie_browse": "📁 Browse"
+    },
+    "cookie_manager": {
+        "window_title": "Eden Cookies Management",
+        "title": "🍪 Eden Cookies Management",
+        "info_group_title": "📊 Cookies Status",
+        "import_group_title": "📂 Manual Import",
+        "file_path_label": "File path:",
+        "file_path_placeholder": "Select a .pkl file or enter the path",
+        "generate_tooltip": "Opens a browser to connect and retrieve cookies",
+        "status_no_cookies": "❌ <b>No cookies found</b>",
+        "status_read_error": "⚠️ <b>Read error</b>",
+        "status_expired": "⚠️ <b>Cookies expired</b>",
+        "status_valid": "✅ <b>Valid cookies</b>",
+        "details_need_import": "To use the Eden scraper, you must import a cookie file.<br/>Use the 'Import Cookies' button below.",
+        "details_need_new": "<br/>You must import new cookies.",
+        "expiry_date": "📅 <b>Expiration date:</b> {date}",
+        "remaining_validity": "⏰ <b>Remaining validity:</b> {days} days",
+        "eden_access": "🌐 <b>Eden Access:</b>",
+        "eden_connected": "<span style='color: green;'>✅ Connected</span>",
+        "eden_testing": "<span style='color: gray;'>⏳ Testing...</span>",
+        "total_cookies": "Total: {count} cookies",
+        "expired_cookies": "Expired: {count}",
+        "valid_cookies": "Valid: {count}",
+        "total_cookies_display": "📦 Total: {count} cookies",
+        "valid_cookies_display": "✓ Valid: {count}",
+        "session_cookies": "🔄 Session: {count}",
+        "file_location": "<br/>📁 File: {path}",
+        "test_with_browser": "{icon} <i>Test performed with: {browser}</i>",
+        "browse_dialog_title": "Select a cookie file",
+        "browse_dialog_filter": "Pickle Files (*.pkl);;All Files (*.*)",
+        "import_warning_title": "Warning",
+        "import_warning_message": "Please select or enter a file path.",
+        "import_error_not_exists_title": "Error",
+        "import_error_not_exists_message": "The file does not exist:\n\n{path}\n\nCheck the path and try again.",
+        "import_success_title": "Success",
+        "import_success_message": "Cookies imported successfully!",
+        "import_error_title": "Error",
+        "import_error_message": "Unable to import cookie file.\n\nFile: {path}\n\nThe file must be a valid .pkl file containing cookies.",
+        "delete_confirm_title": "Confirm deletion",
+        "delete_confirm_message": "Are you sure you want to delete the cookies?\n\nA backup will be created automatically.",
+        "delete_success_title": "Success",
+        "delete_success_message": "Cookies have been deleted.",
+        "delete_error_title": "Error",
+        "delete_error_message": "Unable to delete cookies.",
+        "user_action_title": "Waiting for connection",
+        "user_action_header": "<b>Connect now</b>",
+        "browser_opened_message": "The {browser} browser is open.\n\nLog in with Discord, then click OK.",
+        "cookies_saved_success": "{count} cookies saved successfully"
     },
     "messages": {
         "errors": {
