--- a/Language/fr.json
+++ b/Language/fr.json
@@ -157,7 +157,58 @@
         "download": "📥 Télécharger",
         "eden_refresh": "🔄 Actualiser",
         "eden_search": "🔍 Recherche",
-        "eden_manage": "⚙️ Gérer"
+        "eden_manage": "⚙️ Gérer",
+        "cookie_generate": "🔐 Générer des Cookies",
+        "cookie_delete": "🗑️ Supprimer",
+        "cookie_browse": "📁 Parcourir"
+    },
+    "cookie_manager": {
+        "window_title": "Gestion des Cookies Eden",
+        "title": "🍪 Gestion des Cookies Eden",
+        "info_group_title": "📊 État des Cookies",
+        "import_group_title": "📂 Import Manuel",
+        "file_path_label": "Chemin du fichier :",
+        "file_path_placeholder": "Sélectionnez un fichier .pkl ou saisissez le chemin",
+        "generate_tooltip": "Ouvre un navigateur pour se connecter et récupérer les cookies",
+        "status_no_cookies": "❌ <b>Aucun cookie trouvé</b>",
+        "status_read_error": "⚠️ <b>Erreur de lecture</b>",
+        "status_expired": "⚠️ <b>Cookies expirés</b>",
+        "status_valid": "✅ <b>Cookies valides</b>",
+        "details_need_import": "Pour utiliser le scraper Eden, vous devez importer un fichier de cookies.<br/>Utilisez le bouton 'Importer des Cookies' ci-dessous.",
+        "details_need_new": "<br/>Vous devez importer de nouveaux cookies.",
+        "expiry_date": "📅 <b>Date d'expiration:</b> {date}",
+        "remaining_validity": "⏰ <b>Validité restante:</b> {days} jours",
+        "eden_access": "🌐 <b>Accès Eden :</b>",
+        "eden_connected": "<span style='color: green;'>✅ Connecté</span>",
+        "eden_testing": "<span style='color: gray;'>⏳ Test en cours...</span>",
+        "total_cookies": "Total: {count} cookies",
+        "expired_cookies": "Expirés: {count}",
+        "valid_cookies": "Valides: {count}",
+        "total_cookies_display": "📦 Total: {count} cookies",
+        "valid_cookies_display": "✓ Valides: {count}",
+        "session_cookies": "🔄 Session: {count}",
+        "file_location": "<br/>📁 Fichier: {path}",
+        "test_with_browser": "{icon} <i>Test effectué avec: {browser}</i>",
+        "browse_dialog_title": "Sélectionner un fichier de cookies",
+        "browse_dialog_filter": "Fichiers Pickle (*.pkl);;Tous les fichiers (*.*)",
+        "import_warning_title": "Attention",
+        "import_warning_message": "Veuillez sélectionner ou saisir un chemin de fichier.",
+        "import_error_not_exists_title": "Erreur",
+        "import_error_not_exists_message": "Le fichier n'existe pas :\n\n{path}\n\nVérifiez le chemin et réessayez.",
+        "import_success_title": "Succès",
+        "import_success_message": "Les cookies ont été importés avec succès !",
+        "import_error_title": "Erreur",
+        "import_error_message": "Impossible d'importer le fichier de cookies.\n\nFichier : {path}\n\nLe fichier doit être un fichier .pkl valide contenant des cookies.",
+        "delete_confirm_title": "Confirmer la suppression",
+        "delete_confirm_message": "Êtes-vous sûr de vouloir supprimer les cookies ?\n\nUne sauvegarde sera créée automatiquement.",
+        "delete_success_title": "Succès",
+        "delete_success_message": "Les cookies ont été supprimés.",
+        "delete_error_title": "Erreur",
+        "delete_error_message": "Impossible de supprimer les cookies.",
+        "user_action_title": "En attente de connexion",
+        "user_action_header": "<b>Connectez-vous maintenant</b>",
+        "browser_opened_message": "Le navigateur {browser} est ouvert.\n\nConnectez-vous avec Discord, puis cliquez sur OK.",
+        "cookies_saved_success": "{count} cookies sauvegardés avec succès"
     },
     "messages": {
         "errors": {
